@@ -7,48 +7,47 @@ import com.biteme.app.persistence.OrdineDao;
 import java.math.BigDecimal;
 import java.sql.*;
 import java.util.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public class DatabaseOrdineDao implements OrdineDao {
 
-    private static final Logger LOGGER = Logger.getLogger(DatabaseOrdineDao.class.getName());
-
-    /* ---------- CREATE / UPSERT ---------- */
     @Override
     public int create(Ordine o) {
+        // MySQL upsert syntax
         final String upsertSql =
-                "INSERT INTO ordine (id, prodotti, quantita, prezzi) " +
-                        "VALUES (?, ?, ?, ?) " +
-                        "ON CONFLICT (id) DO UPDATE SET " +
-                        "prodotti = EXCLUDED.prodotti, " +
-                        "quantita = EXCLUDED.quantita, " +
-                        "prezzi   = EXCLUDED.prezzi";
+                "INSERT INTO ordine (id, prodotti, quantita, prezzi) VALUES (?, ?, ?, ?) " +
+                        "ON DUPLICATE KEY UPDATE " +
+                        "  prodotti = VALUES(prodotti), " +
+                        "  quantita = VALUES(quantita), " +
+                        "  prezzi   = VALUES(prezzi)";
 
         try (Connection c = DatabaseConnection.getConnection();
              PreparedStatement ps = c.prepareStatement(upsertSql)) {
 
             int id = (o.getId() > 0) ? o.getId() : nextId(c);
-            ps.setInt   (1, id);
+            ps.setInt(1, id);
+
+            // CSV for prodotti, quantita, prezzi
             ps.setString(2, String.join(",", o.getProdotti()));
-            ps.setString(3, o.getQuantita().toString().replaceAll("[\\[\\] ]", ""));
-            ps.setString(4,
-                    (o.getPrezzi() == null || o.getPrezzi().isEmpty())
-                            ? ""
-                            : o.getPrezzi().stream()
-                            .map(BigDecimal::toString)
-                            .reduce((a, b) -> a + "," + b)
-                            .orElse(""));
+            ps.setString(3, o.getQuantita().stream()
+                    .map(String::valueOf)
+                    .collect(Collectors.joining(",")));
+            ps.setString(4, o.getPrezzi().stream()
+                    .map(BigDecimal::toPlainString)
+                    .collect(Collectors.joining(",")));
 
             ps.executeUpdate();
             return id;
 
         } catch (SQLException ex) {
-            throw new DatabaseConfigurationException("Errore salva/aggiorna ordine", ex);
+            // rethrow with context, do not both log and rethrow
+            throw new DatabaseConfigurationException(
+                    "Errore salva/aggiorna ordine (id=" + o.getId() + "): " + ex.getMessage(),
+                    ex
+            );
         }
     }
 
-    /* ---------- sequenza auto-ID ---------- */
     private int nextId(Connection c) throws SQLException {
         try (Statement st = c.createStatement();
              ResultSet rs = st.executeQuery("SELECT COALESCE(MAX(id),0)+1 FROM ordine")) {
@@ -57,10 +56,9 @@ public class DatabaseOrdineDao implements OrdineDao {
         }
     }
 
-    /* ---------- READ ---------- */
     @Override
     public Optional<Ordine> read(int id) {
-        final String sql = "SELECT id, prodotti, quantita, prezzi FROM ordine WHERE id=?";
+        final String sql = "SELECT id, prodotti, quantita, prezzi FROM ordine WHERE id = ?";
         try (Connection c = DatabaseConnection.getConnection();
              PreparedStatement ps = c.prepareStatement(sql)) {
 
@@ -69,27 +67,29 @@ public class DatabaseOrdineDao implements OrdineDao {
                 return rs.next() ? Optional.of(map(rs)) : Optional.empty();
             }
         } catch (SQLException ex) {
-            LOGGER.log(Level.SEVERE, ex, () -> "Errore load ordine " + id);
-            return Optional.empty();
+            throw new DatabaseConfigurationException(
+                    "Errore caricando ordine con id " + id + ": " + ex.getMessage(),
+                    ex
+            );
         }
     }
 
-    /* ---------- DELETE ---------- */
     @Override
     public void delete(int id) {
-        final String sql = "DELETE FROM ordine WHERE id=?";
+        final String sql = "DELETE FROM ordine WHERE id = ?";
         try (Connection c = DatabaseConnection.getConnection();
              PreparedStatement ps = c.prepareStatement(sql)) {
 
             ps.setInt(1, id);
-            if (ps.executeUpdate() == 0)
-                LOGGER.warning(() -> "Nessun ordine con ID " + id);
+            ps.executeUpdate();
         } catch (SQLException ex) {
-            LOGGER.log(Level.SEVERE, ex, () -> "Errore delete ordine " + id);
+            throw new DatabaseConfigurationException(
+                    "Errore eliminando ordine con id " + id + ": " + ex.getMessage(),
+                    ex
+            );
         }
     }
 
-    /* ---------- LIST ALL ---------- */
     @Override
     public List<Ordine> getAll() {
         final String sql = "SELECT id, prodotti, quantita, prezzi FROM ordine";
@@ -98,57 +98,47 @@ public class DatabaseOrdineDao implements OrdineDao {
              PreparedStatement ps = c.prepareStatement(sql);
              ResultSet rs = ps.executeQuery()) {
 
-            while (rs.next()) list.add(map(rs));
+            while (rs.next()) {
+                list.add(map(rs));
+            }
+            return list;
+
         } catch (SQLException ex) {
-            LOGGER.log(Level.SEVERE, ex, () -> "Errore lista ordini");
+            throw new DatabaseConfigurationException(
+                    "Errore recuperando tutti gli ordini: " + ex.getMessage(),
+                    ex
+            );
         }
-        return list;
     }
 
-    /* ---------- mapper helper ---------- */
     private Ordine map(ResultSet rs) throws SQLException {
         return new Ordine(
                 rs.getInt("id"),
-                parseList     (rs.getString("prodotti")),
-                parseIntList  (rs.getString("quantita")),
-                parseBigList  (rs.getString("prezzi"))
+                parseList(rs.getString("prodotti")),
+                parseIntList(rs.getString("quantita")),
+                parseBigList(rs.getString("prezzi"))
         );
     }
 
-    /* ---------- parsing helper ---------- */
-
     private List<String> parseList(String s) {
-        if (s == null || s.trim().isEmpty()) return Collections.emptyList();
-        List<String> list = new ArrayList<>();
-        for (String t : s.split(",")) list.add(t.trim());
-        return list;
+        if (s == null || s.isBlank()) return List.of();
+        String[] parts = s.split(",");
+        return Arrays.stream(parts).map(String::trim).toList();
     }
 
     private List<Integer> parseIntList(String s) {
-        if (s == null || s.trim().isEmpty()) return Collections.emptyList();
-
-        List<Integer> list = new ArrayList<>();
-        for (String token : s.split(",")) {
-            try {
-                list.add(Integer.parseInt(token.trim()));
-            } catch (NumberFormatException ex) {
-                LOGGER.warning("Valore quantità non intero ignorato: '" + token + "'");
-            }
-        }
-        return list;
+        if (s == null || s.isBlank()) return List.of();
+        return Arrays.stream(s.split(","))
+                .map(String::trim)
+                .map(Integer::valueOf)
+                .toList();
     }
 
     private List<BigDecimal> parseBigList(String s) {
-        if (s == null || s.trim().isEmpty()) return Collections.emptyList();
-
-        List<BigDecimal> list = new ArrayList<>();
-        for (String token : s.split(",")) {
-            try {
-                list.add(new BigDecimal(token.trim()));
-            } catch (NumberFormatException ex) {
-                LOGGER.warning("Valore prezzo non numerico ignorato: '" + token + "'");
-            }
-        }
-        return list;
+        if (s == null || s.isBlank()) return List.of();
+        return Arrays.stream(s.split(","))
+                .map(String::trim)
+                .map(BigDecimal::new)
+                .toList();
     }
 }
